# zero2prod

./: .env  Cargo.toml
.github/workflows/: main-pipeline.yml
migrations/: 20250321190600_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
src/scripts/: init_db.sh
tests/: health_check.rs
