[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Mauricio Tamez <vitxlssreturn@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
config = "0.15.11"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"

[dev-dependencies]
reqwest = "0.12.14"


